# monitor-server

./: .gitignore  LICENSE  README.md  VAULT_USAGE.md  ansible.cfg  bootstrap.yml  bootstrap.yml.deprecated  bootstrap_inventory.ini.deprecated  intent.txt  inventory.ini  pyproject.toml  setup_network.sh  site.yml  test_cockpit.yml
ansible/: ansible.cfg  vault_pass_template
ansible/inventory/: hosts.ini
ansible/playbooks/: provision_flypack.yml  test-server-qa.yml
ansible/roles/server_qa/: README.md
ansible/roles/server_qa/tasks/: main.yml
docs/: INVENTORY.md  NETWORKING.md  QUICKSTART.md  ROLES.md  SECURITY.md  TROUBLESHOOTING.md
group_vars/: all.yml
group_vars/all/: become_vars.yml  nginx.yml  ssh_hardening.yml  vault.yml
memory-bank/: architecture.md  changelog.md  patterns.md  project.md
roles/basic-utilities/tasks/: main.yml  validate.yml
roles/blackbox-exporter/handlers/: main.yml
roles/blackbox-exporter/tasks/: main.yml  validate.yml
roles/blackbox-exporter/templates/: blackbox.yml.j2
roles/bootstrap/handlers/: main.yml
roles/bootstrap/tasks/: main.yml
roles/cockpit/defaults/: main.yml
roles/cockpit/handlers/: main.yml
roles/cockpit/tasks/: main.yml  validate.yml
roles/cockpit/templates/: socket.override.conf.j2
roles/influxdb/handlers/: main.yml
roles/influxdb/tasks/: main.yml  validate.yml
roles/influxdb/templates/: influxdb-override.conf.j2
roles/initial_setup/handlers/: main.yml
roles/initial_setup/tasks/: main.yml  validate.yml
roles/network/handlers/: main.yml
roles/network/tasks/: main.yml  validate.yml
roles/network/templates/: 01-netcfg.yaml.j2
roles/nginx-proxy/handlers/: main.yml
roles/nginx-proxy/meta/: main.yml
roles/nginx-proxy/tasks/: main.yml  validate.yml
roles/nginx-proxy/templates/: default.conf.j2  nginx.conf.j2  preferences.j2
roles/node-exporter/tasks/: main.yml  validate.yml
roles/prometheus/handlers/: main.yml
roles/prometheus/tasks/: main.yml  validate.yml
roles/prometheus/templates/: prometheus-override.conf.j2  prometheus.yml.j2  web.yml.j2
roles/snmp-exporter/handlers/: main.yml
roles/snmp-exporter/tasks/: main.yml  validate.yml
roles/snmp-exporter/templates/: snmp.yml.j2
roles/ssh-hardening/handlers/: main.yml
roles/ssh-hardening/tasks/: main.yml  validate.yml
roles/ssh-hardening/templates/: sshd_config.j2
roles/website-deploy/tasks/: main.yml  validate.yml
roles/website/tasks/: main.yml  validate.yml
roles/website/templates/: devices.html.j2  index.html.j2
scripts/: network-config.defaults.example  setup_network.sh
src/monitor_server/: __init__.py
website/: devices.html  index.html
